--- a/web/front/.prettierrc
+++ b/web/front/.prettierrc
@@ -1,5 +1,8 @@
 {
   "semi": false,
   "singleQuote": true,
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "htmlWhitespaceSensitivity": "ignore",
+  "bracketSpacing": true,
+  "jsxBracketSameLine": true
 }
